--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -101,7 +101,7 @@
         });
         console.log("pass")
         var questions = [
-            'You enjoy  with lots of people.',
+            'You enjoy spending time with lots of people.',
             'You often spend time exploring unrealistic yet intriguing ideas.',
             'Your travel plans are more likely to look like a rough list of ideas than a detailed itinerary.',
             'You often think about what you should have said in a conversation long after it has taken place.',
@@ -136,7 +136,7 @@
         // ------------------------ALSO CHANGE apiRoutes.js----------------------//
         var newQuestion = $(`<fieldset id="infoGroup">`)
         var newAlert = $(`<div class="alert alert-warning pt-4" role="alert">`)
-        $(newAlert).append(`<h4 class="alert-heading">Please add some info so you can be found.</h4><hr>`);
+        $(newAlert).append(`<h4 class="alert-heading">Please add some info to find the best match.</h4><hr>`);
         var info = ['Name', 'Age', 'Picture']
         for (i in info) {
             if (info[i]==="Picture"){ 
