--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand navbar-light bg-light mb-3">
+    <nav class="navbar navbar-expand navbar-light bg-dark mb-3">
         <div class="nav navbar-nav">
             <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="/survey">Survey</a>
