--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      <nav class="navbar navbar-expand navbar-light bg-light">
+      <nav class="navbar navbar-expand navbar-light bg-dark">
           <div class="nav navbar-nav">
               <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link" href="/survey">Survey</a>
